--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-writable-nested==0.7.0
 gunicorn==20.1.0
+psycopg2==2.9.5
 PyJWT==2.6.0
 pytz==2022.6
 sqlparse==0.4.3
 tzdata==2022.6
+whitenoise==6.2.0
